Completed Vite migration from CRA: modernized build tooling and updated project structure\n\n- Replaced react-scripts with vite@6.2.2 and @vitejs/plugin-react@4.3.4 for faster dev/build\n- Moved index.html from public/ to frontend/ root\n- Renamed .js files with JSX to .jsx across src/pages/ and src/components/ (e.g., App.js → App.jsx)\n- Added vite.config.js (port 4000, React plugin) and postcss.config.js (Tailwind/Autoprefixer)\n- Updated tailwind.config.js content paths for Vite (index.html, .jsx, styles.js)\n- Switched .env from REACT_APP_* to VITE_* and updated .jsx files to use import.meta.env.VITE_*\n- Removed CRA leftovers: deleted public/, src/setupTests.js, src/reportWebVitals.js\n- Fixed Kawaii styling (pastels, rounded shapes) by integrating PostCSS with Tailwind\n- Verified all functionality: signup, login, auth redirect, profile, booking, confirmation, messages\n- Ran npm audit: zero vulnerabilities post-migration\n- Updated README.md: reflected Vite setup, .jsx files, new configs, removed CRA references\n- Updated Roadmap.md: added C.6 Vite migration, preserved A/B task granularity, coarsened completed C items

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,28 +8,26 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.20",
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^16.4.7",
     "ics": "^3.8.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "^5.0.1",
     "runes": "^0.4.3",
-    "tailwindcss": "^3.4.17",
+    "vite": "^6.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=4000 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "echo \"Tests not yet configured for Vite\" && exit 0"
   },
   "eslintConfig": {
     "extends": [
@@ -50,7 +48,12 @@
     ]
   },
   "resolutions": {
-  "nth-check": "2.0.1",
-  "postcss": "8.4.31"
+    "nth-check": "2.0.1",
+    "postcss": "8.4.31"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
